--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-requests==2.31.0
+playwright==1.39.0
 beautifulsoup4==4.12.2
 numpy==1.24.3
-pandas==1.5.3
+pandas==2.1.3
 fake-useragent==1.3.0
+python-dotenv==1.0.0
+matplotlib==3.8.2
+seaborn==0.13.0
+jieba==0.42.1
