1、更新说明文档 2、云服务器配置

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 GOOGLE_API_KEY=your_api_key_here
 SEARCH_ENGINE_ID=your_search_engine_id_here
+
+# Email Configuration
+SMTP_SERVER=smtp.example.com
+SMTP_PORT=587
+SENDER_EMAIL=your_email@example.com
+SENDER_PASSWORD=your_email_password
+RECIPIENT_EMAIL=recipient@example.com
