--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-playwright==1.39.0
-beautifulsoup4==4.12.2
-numpy==1.24.3
-pandas==2.1.3
+playwright>=1.39.0
+beautifulsoup4>=4.12.2
+numpy>=1.24.3
+pandas>=2.0.3
 fake-useragent==1.3.0
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 matplotlib==3.8.2
 seaborn==0.13.0
 jieba==0.42.1
+requests>=2.31.0
